[project]
name = "ragathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Tusanth"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.24,<0.4.0)",
    "chainlit (>=2.5.5,<3.0.0)",
    "langfuse (>=2.60.3,<3.0.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "langchain-chroma (>=0.2.3,<0.3.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "langchain-community (>=0.3.22,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "pypdf (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
